# dariks_school_to_code_good

./: 0_Introduction.ipynb  404.html  README.md  bad_code.py  clean_code_best_practices.ipynb  dariks_school_to_code_good_polished.ipynb  draft_lesson.ipynb  index.html  lesson.ipynb  mkdocs.yml  pyproject.toml  scratch.py  session_I.ipynb  simulated_calcium_data.npy  sitemap.xml
.github/workflows/: main.yml
about/: index.html
contact/: index.html
css/: custom.css
docs/css/: custom.css
docs/lessons/0_introduction/: docs.md  ides.md  languages.md  programming_matters.md  what_is_programming.md
docs/lessons/10_testing/: integration_testing.md  test_driven_development.md  unit_testing.md
docs/lessons/11_advanced_topics/: concurrency.md  functional_programming.md  memory_management.md  recursion.md
docs/lessons/1_data_types/: booleans.md  fundamentals.md  numerics.md  text.md
docs/lessons/2_expressions/: comparisons.md  fundamentals.md  literals.md  operators.md  variables.md
docs/lessons/3_control_flow/: conditionals.md  iteration.md  matching.md  statements.md
docs/lessons/4_functions/: defining_functions.md  parameters_and_arguments.md  return_values.md  scope_and_lifetime.md  scripts_vs_functions.md
docs/lessons/5_data_structures/: arrays.md  hash_map.md  lists.md  sets.md  tuples.md
docs/lessons/6_classes/: attributes_and_methods.md  defining_classes.md  encapsulation.md  instantiation.md
docs/lessons/7_modules/: importing.md  libraries_and_packages.md
docs/lessons/8_git/: branching_and_merging.md  version_control_basics.md
docs/lessons/9_debugging/: debugging_tools.md  error_types.md  exception_and_error_handling.md  linting_and_static_analysis.md
docs/lessons/introduction/: languages.md
docs/lessons/preface/: docs.md  ides.md  venv.md
example/: exsrc.py
lessons/10_testing/integration_testing/: index.html
lessons/10_testing/test_driven_development/: index.html
lessons/10_testing/unit_testing/: index.html
lessons/11_advanced_topics/concurrency/: index.html
lessons/11_advanced_topics/functional_programming/: index.html
lessons/11_advanced_topics/memory_management/: index.html
lessons/11_advanced_topics/recursion/: index.html
lessons/1_data_types/booleans/: index.html
lessons/1_data_types/fundamentals/: index.html
lessons/1_data_types/numerics/: index.html
lessons/1_data_types/text/: index.html
lessons/2_expressions/comparisons/: index.html
lessons/2_expressions/fundamentals/: index.html
lessons/2_expressions/literals/: index.html
lessons/2_expressions/operators/: index.html
lessons/2_expressions/variables/: index.html
lessons/3_control_flow/conditionals/: index.html
lessons/3_control_flow/iteration/: index.html
lessons/3_control_flow/matching/: index.html
lessons/3_control_flow/statements/: index.html
lessons/4_functions/defining_functions/: index.html
lessons/4_functions/parameters_and_arguments/: index.html
lessons/4_functions/return_values/: index.html
lessons/4_functions/scope_and_lifetime/: index.html
lessons/4_functions/scripts_vs_functions/: index.html
lessons/5_data_structures/arrays/: index.html
lessons/5_data_structures/hash_map/: index.html
lessons/5_data_structures/lists/: index.html
lessons/5_data_structures/sets/: index.html
lessons/5_data_structures/tuples/: index.html
lessons/6_classes/attributes_and_methods/: index.html
lessons/6_classes/defining_classes/: index.html
lessons/6_classes/encapsulation/: index.html
lessons/6_classes/instantiation/: index.html
lessons/7_modules/importing/: index.html
lessons/7_modules/libraries_and_packages/: index.html
lessons/8_git/branching_and_merging/: index.html
lessons/8_git/version_control_basics/: index.html
lessons/9_debugging/debugging_tools/: index.html
lessons/9_debugging/error_types/: index.html
lessons/9_debugging/exception_and_error_handling/: index.html
lessons/9_debugging/linting_and_static_analysis/: index.html
lessons/introduction/languages/: index.html
lessons/introduction/programming_matters/: index.html
lessons/introduction/what_is_programming/: index.html
lessons/preface/docs/: index.html
lessons/preface/ides/: index.html
resources/: index.html
search/: search_index.json
