[project]
name = "dariks-school-to-code-good"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "coverage[toml]",
    "pydantic",
    "pytest",
    "pytest-sugar",
    "pytest-clarity",
    "ruff",
    "sphinx",
    "autodoc_pydantic",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "toml",
    "tomli-w",
    "jupyterlab>=4.5.0",
    "numpy>=2.3.5",
    "matplotlib>=3.10.8",
]


#///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
#// TESTING CONFIGURATION (PYTEST)
#///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-s",
    "--color=yes",
    "-vv",
    "--diff-width=120",
]
tests = "tests"
console_output_style = "progress"

#///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
#// COVERAGE CONFIGURATION (COVERAGE)
#///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////


[tool.coverage.run]
branch = true
command_line = "-m pytest"
omit = [
    "*/tests/*",
     "*/*JetBrains*/*",  # Exclude JetBrains specific files
    "*/*PyCharm*Professional*/*",
]
dynamic_context = "test_function"

[tool.coverage.report]
fail_under = 75
exclude_also = [
    "def __repr__",
    "def __name__",
    "def __del__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "except ImportError",
    "@(abc\\.)?abstractmethod",
    "@(abc\\.)?abstractproperty",
    "@(abc\\.)?abstractclassmethod",
    "@(abc\\.)?abstractstaticmethod"
]

[tool.coverage.json]
pretty_print = true

[tool.coverage.html]
show_contexts = true

#///////////////////////////////////////////////////////////////////////////////////////
#// GENERAL RUFF CONFIUGRATION
#///////////////////////////////////////////////////////////////////////////////////////

[tool.ruff]
exclude = [
    "*/Scratches/*",
    "*/.idea/*",
    "*/scripts/*",
    "*/.git/*",
    "*/.github/*",
    "*/.vscode/*",
    "*/__pycache__/*",
    "*/.pytest_cache/*",
    "*/*.egg-info/*",
    "*/build/*",
    "*/dist/*",
    "*/.mypy_cache/*",
    "*/.tox/*",
    "*coverage*",
    "*/.cache/*",
    "*/docs/*",
    "*/venv/*",
    "*.gitignore",
    "README.md",
    "LICENSE",
    ".flake8",
    "*/linting/*",
    ".readthedocs.yaml",
    "*/Scratches and Consoles/*",
    "*/External Libraries/*",
    "*/assets/*"
]
line-length = 88 # Black Compatibility
indent-width = 4 # Black Compatibility
output-format = "json"

#///////////////////////////////////////////////////////////////////////////////////////
#// LINTING CONFIGURATION (RUFF)
#///////////////////////////////////////////////////////////////////////////////////////


[tool.ruff.lint]
select = ["ALL", ]
ignore = [
    # /////////////////////////////////////////////////////////
    # IGNORE THESE ENTIRE MODULES
    # /////////////////////////////////////////////////////////
    "C90", # mccabe complexity
    "D", # pydocstyle
    "DJ",  # django
    "EXE", # flake8-executable
    "PD", # pandas
    "PL", # pylint
    "PLR", # pylint refactor is super opinionated
    "T10", # debugger
    "TID", # flake8-tidy-imports
    # /////////////////////////////////////////////////////////
    # IGNORE THESE SPECIFIC RULES
    # /////////////////////////////////////////////////////////
    "ANN204",
    "COM812",
    "ANN401",
    "ANN002",
    "ANN003",
    "E203",
    "E501",
    "E701",
    "COM812",
    "COM818",
    'ERA001', 'T201', # Code comments
    'RET503', # No explicit return None
    'FIX002', # Fixme comments
    'FIX004', # Fixme comments
    "TD002",
    "TD003",
    "TRY003", # external messages in exceptions are too verbose
    "S101",
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-boolean-trap]
extend-allowed-calls = ["pydantic.Field", ]

#[tool.ruff.lint.flake8-import-conventions.extend-aliases]
# Declare the default aliases.
#...

#///////////////////////////////////////////////////////////////////////////////////////
#// FORMATTING CONFIGURATION (RUFF)
#///////////////////////////////////////////////////////////////////////////////////////

[tool.ruff.format]
quote-style = "double"  # Black Compatibility
indent-style = "space"  # Black Compatibility
skip-magic-trailing-comma = false  # Black Compatibility
line-ending = "auto"  # Black Compatibility
docstring-code-format = true  # Auto-formatting of code examples in docstrings
docstring-code-line-length = "dynamic"  # Line length for code examples in docstrings
